--- a/website/package.json
+++ b/website/package.json
@@ -3,19 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/ui-react": "^0.2.36",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
-    "aws-amplify": "^3.3.16",
-    "aws-amplify-react": "^4.2.22",
-    "react": "^17.0.1",
-    "react-bounding-box": "^0.5.21",
-    "react-dom": "^17.0.1",
-    "react-json-view": "^1.21.1",
-    "react-scripts": "4.0.1",
+    "@aws-amplify/ui-react": "^1.2.22",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "aws-amplify": "^4.3.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3",
+    "semantic-ui-react": "^2.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
