--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,7 @@
     "aws-amplify": "^4.3.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
