--- a/website/package.json
+++ b/website/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
-    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-css": "git+https://github.com/Semantic-Org/Semantic-UI-CSS.git",
     "semantic-ui-react": "^2.0.4",
     "web-vitals": "^2.1.4"
   },
