--- a/website/package.json
+++ b/website/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.14",
+    "mapbox-gl": "^1.13.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
