Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ zip_repo:
   #image:
   #  name: ubuntu
   script: 
-    - gzip -c * > drem.zip
+    - gzip ./ > drem.zip
   artifacts:
     paths:
     - drem.zip
