Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,6 @@ upload_to_s3:
     - aws --version
     - ls drem.zip -lah
     - echo $AWS_DEFAULT_REGION
-    - aws s3 cp drem.zip s3://$AWS_S3_BUCKET/
+    - aws s3 cp drem.zip s3://$AWS_S3_BUCKET/$CI_COMMIT_REF_NAME/
     
     
