--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ __pycache__
 cdk.out
 cdk.outputs
 cdk.context.json
+cfn.outputs
 
 lambda/get_smg_trains_simple/images
 lambda/get_smg_trains_simple/data.json
@@ -20,3 +21,5 @@ node_modules
 
 # IDE
 .vscode
+
+branch.txt
