--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,20 @@
 stages:
-  - zip_repo 
-  - upload_to_s3
+  - zip
+  - upload
 
 zip_repo:
   only:
     - main
     - release
-  stage: zip_repo
+    - cdk-pipeline
+    - cdk-pipeline-askwith
+  stage: zip
   image:
     name: ubuntu
   script: 
     - apt-get -y update
     - apt-get -y install zip
+    - echo $CI_COMMIT_REF_NAME > branch.txt
     - zip -r drem.zip .
   artifacts:
     paths:
@@ -21,7 +24,9 @@ upload_to_s3:
   only:
     - main
     - release
-  stage: upload_to_s3
+    - cdk-pipeline
+    - cdk-pipeline-askwith
+  stage: upload
   image:
     name: amazon/aws-cli
     entrypoint: [""]
