--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,6 +3,7 @@
 pytest==7.1.2
 pytest-cov==3.0.0
 moto[all]
+boto3
 
 #lambda function dependencies used for unit testing
 -r ./infrastructure/lambdas/get_models_function/requirements.txt
