--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,5 +5,5 @@ pytest-cov==3.0.0
 moto[all]
 boto3
 
-#lambda function dependencies used for unit testing
--r ./backend/lambdas/get_models_function/requirements.txt
+# lambda layer dependencies used during unit testing
+-r ./backend/lambdas/helper_functions_layer/http_response/requirements.txt
