--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ zip_repo:
   only:
     - main
     - release
-    - unittest
+    - esbjj
     - cdk-pipeline-askwith
     - cdk-pipeline-dasmthc
   stage: zip
@@ -26,7 +26,7 @@ upload_to_s3:
   only:
     - main
     - release
-    - unittest
+    - esbjj
     - cdk-pipeline-askwith
     - cdk-pipeline-dasmthc
   stage: upload
