--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-aws.cdk-lib==2.38.1
-aws_cdk.aws_lambda_python_alpha==2.38.1a0
+aws.cdk-lib==2.47.0
+aws_cdk.aws_lambda_python_alpha==2.47.0a0
+aws_cdk.aws_appsync_alpha==2.47.0a0
 cdk-serverless-clamscan==2.4.7
