--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ branch.txt
 email.txt
 reports
 htmlcov
+website/src/graphql/schema.graphql
+website/src/graphql/mutations.js
+website/src/graphql/queries.js
+website/src/graphql/subscriptions.js
+appsyncId.txt
