--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,6 +5,10 @@ pytest-cov==3.0.0
 moto[all]
 boto3
 cdk-nag
+pre-commit
+black
+flake8
+isort
 
 # lambda layer dependencies used during unit testing
 -r ./backend/lambdas/helper_functions_layer/http_response/requirements.txt
