--- a/website/package.json
+++ b/website/package.json
@@ -56,7 +56,17 @@
     ]
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.4.0"
+    "@svgr/webpack": "^6.4.0",
+    "eslint": "^8.27.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1"
   },
   "overrides": {
     "@svgr/webpack": "$@svgr/webpack"
