internationalisation first pass

--- a/website/package.json
+++ b/website/package.json
@@ -19,13 +19,14 @@
     "@testing-library/user-event": "^14.4.3",
     "aws-amplify": "^4.3.39",
     "dayjs": "^1.11.6",
-    "i18next": "^22.0.2",
+    "i18next": "^22.4.5",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-http-backend": "^1.4.4",
+    "i18next-xhr-backend": "^3.2.2",
     "mapbox-gl": "^2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.0.0",
+    "react-i18next": "^12.1.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
