--- a/website/package.json
+++ b/website/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@xstate/react": "^3.0.1",
     "aws-amplify": "^4.3.39",
     "dayjs": "^1.11.6",
     "i18next": "^22.0.2",
@@ -29,7 +30,8 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
-    "web-vitals": "^3.0.4"
+    "web-vitals": "^3.0.4",
+    "xstate": "^4.35.0"
   },
   "scripts": {
     "start": "ESLINT_NO_DEV_ERRORS='true' react-scripts start",
