--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,14 +1,11 @@
 {
-  // See https://go.microsoft.com/fwlink/?LinkId=827846 to learn about workspace recommendations.
-  // Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
-
-  // List of extensions which should be recommended for users of this workspace.
   "recommendations": [
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
     "ms-python.isort",
-    "ms-python.python"
+    "ms-python.python",
+    "statelyai.stately-vscode"
   ],
-  // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
+
   "unwantedRecommendations": []
 }
