--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ zip_repo:
     - release
     - esbjj
     - cdk-pipeline-askwith
-    - cdk-pipeline-dasmthc
+    - dasmthc
   stage: zip
   image:
     name: ubuntu
