Event & fleet page update

--- a/website/.eslintrc.json
+++ b/website/.eslintrc.json
@@ -19,7 +19,8 @@
   },
   "overrides": [],
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaVersion": 2021
   },
   "plugins": ["prettier"],
   "rules": {
@@ -35,7 +36,7 @@
 
     "react/prop-types": "off",
     "react/display-name": "off",
-    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/rules-of-hooks": "off",
     "react-hooks/exhaustive-deps": "error",
 
     "curly": ["error", "multi-line"],
