--- a/website/package.json
+++ b/website/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@xstate/react": "^3.0.1",
     "aws-amplify": "^4.3.39",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.6",
     "i18n-iso-countries": "^7.5.0",
     "i18next": "^22.4.5",
