CDK - changed to TS

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,13 @@ website/src/graphql/mutations.js
 website/src/graphql/queries.js
 website/src/graphql/subscriptions.js
 appsyncId.txt
+
+
+*.js
+!jest.config.js
+*.d.ts
+node_modules
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
