Improved readme describung the build process for GitLab and without. Clean...

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ zip_repo:
     - esbjj
     - cdk-pipeline-askwith
     - dasmthc
+    - marbuss-doc-updating
   stage: zip
   image:
     name: ubuntu
