--- a/package.json
+++ b/package.json
@@ -33,18 +33,7 @@
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
     "aws-cdk": "2.60.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.9.1",
-    "typescript": "~3.9.7"
-  },
-  "dependencies": {
-    "@aws-cdk/aws-lambda-python-alpha": "^2.60.0-alpha.0",
-    "aws-cdk-lib": "2.60.0",
-    "awscdk-appsync-utils": "^0.0.4",
-    "cdk-serverless-clamscan": "^2.4.147",
-    "constructs": "^10.0.0",
-    "eslint": "^8.27.0",
+    "eslint": "^8.32.0",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -53,7 +42,20 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^27.5.1",
     "prettier": "^2.7.1",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.9.1",
+    "typescript": "~3.9.7"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-lambda-python-alpha": "^2.60.0-alpha.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "aws-cdk-lib": "2.60.0",
+    "awscdk-appsync-utils": "^0.0.4",
+    "cdk-serverless-clamscan": "^2.4.147",
+    "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
 }
