Timekeeper - updated filenames to match camelcase

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,3 +27,9 @@ repos:
         name: eslint
         entry: bash -c "git diff --diff-filter=d --cached --name-only | grep -E '\.(js|jsx)$' | xargs -I % sh -c 'git show ":%" | ./website/node_modules/.bin/eslint --stdin --stdin-filename "%";'"
         language: node
+      - id: lower-case-file-names-only
+        name: lower case file names only
+        entry: filenames must be lower-case
+        language: fail
+        files: '[^a-z0-9./-]'
+        types_or: [javascript, jsx, ts, tsx, python]
