--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ charset = utf-8
 max_line_length = 119
 
 # Use 2 spaces for frontend files
-[*.{html,js,css}]
+[*.{html,js,jsx,css}]
 indent_size = 2
 
 # The JSON files contain newlines inconsistently
