--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ zip_repo:
     - esbjj
     - cdk-pipeline-askwith
     - dasmthc
-    - marbuss-doc-updating
+    - marbuss
   stage: zip
   image:
     name: ubuntu
@@ -30,6 +30,7 @@ upload_to_s3:
     - esbjj
     - cdk-pipeline-askwith
     - dasmthc
+    - marbuss
   stage: upload
   image:
     name: amazon/aws-cli
