--- a/website-leaderboard/package.json
+++ b/website-leaderboard/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.3.2",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-xhr-backend": "^3.2.2",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
