Resolve "To many docker pull requests in CI pipeline"

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ zip_repo:
     - csj
   stage: zip
   image:
-    name: ubuntu
+    name: public.ecr.aws/ubuntu/ubuntu:22.10_stable
   script:
     - apt-get -y update
     - apt-get -y install zip
@@ -37,7 +37,7 @@ upload_to_s3:
     - csj
   stage: upload
   image:
-    name: amazon/aws-cli
+    name: public.ecr.aws/aws-cli/aws-cli:latest
     entrypoint: [""]
   script:
     - aws --version
