First working version of DREM Overlay System (ported from GoSquared version).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ zip_repo:
     - cdk-pipeline-askwith
     - dasmthc
     - marbuss
+    - mrglover-overlay
     - danlndnr
     - csj
   stage: zip
@@ -33,6 +34,7 @@ upload_to_s3:
     - cdk-pipeline-askwith
     - dasmthc
     - marbuss
+    - mrglover-overlay
     - danlndnr
     - csj
   stage: upload
