--- a/website-leaderboard/package.json
+++ b/website-leaderboard/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^5.0.12",
+    "aws-rum-web": "^1.13.6",
     "classnames": "^2.3.2",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-xhr-backend": "^3.2.2",
