--- a/website/package.json
+++ b/website/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@xstate/react": "^3.0.1",
     "aws-amplify": "^4.3.39",
+    "aws-rum-web": "^1.13.6",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.6",
     "i18n-iso-countries": "^7.5.0",
@@ -26,7 +27,9 @@
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-http-backend": "^1.4.4",
     "i18next-xhr-backend": "^3.2.2",
+    "install": "^0.13.0",
     "mapbox-gl": "^2.10.0",
+    "npm": "^9.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
