--- a/website-stream-overlays/package.json
+++ b/website-stream-overlays/package.json
@@ -12,8 +12,14 @@
     "@types/react-dom": "^18.0.11",
     "aws-amplify": "^5.0.20",
     "d3": "^7.8.2",
+    "i18n-iso-countries": "^7.6.0",
+    "i18next": "^22.4.14",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
