Remove upload card from home page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,10 @@
   "editor.codeActionsOnSave": {
     "source.organizeImports": true,
     "source.fixAll.eslint": true
-  }
+  },
+  "i18n-ally.localesPaths": [
+    "website/public/locales",
+    "website-leaderboard/public/locales",
+    "website-stream-overlays/public/locales"
+  ]
 }
