New developer branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ zip_repo:
     - mrglover-overlay
     - danlndnr
     - csj
+    - hejoro
   stage: zip
   image:
     name: public.ecr.aws/ubuntu/ubuntu:22.10_stable
@@ -37,6 +38,7 @@ upload_to_s3:
     - mrglover-overlay
     - danlndnr
     - csj
+    - hejoro
   stage: upload
   image:
     name: public.ecr.aws/aws-cli/aws-cli:latest
