--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ zip_repo:
     - apt-get -y install zip
     - echo $CI_COMMIT_REF_NAME > branch.txt
     - echo $EMAIL > email.txt
-    - zip -r drem.zip .
+    - zip -r drem.zip . -x '*node_modules*' -x '*.git*' -x '*.venv*' -x '*cdk.out*'
   artifacts:
     paths:
     - drem.zip
