--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "postinstall": "(cd website-leaderboard && npm install); (cd website-stream-overlays && npm install); (cd website && npm install)" 
+    "postinstall": "(cd website-leaderboard && npm install); (cd website-stream-overlays && npm install); (cd website && npm install)"
   },
   "eslintConfig": {
     "extends": [
@@ -30,32 +30,32 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^27.5.2",
-    "@types/node": "10.17.27",
-    "@types/prettier": "2.6.0",
-    "aws-cdk": "2.60.0",
+    "@types/jest": "^29.5.1",
+    "@types/node": "20.4.5",
+    "@types/prettier": "3.0.0",
+    "aws-cdk": "2.89.0",
     "eslint": "^8.32.0",
     "eslint-config-node": "^4.1.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^27.5.1",
-    "prettier": "^2.7.1",
-    "ts-jest": "^27.1.4",
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "~3.9.7"
+    "typescript": "5.1.6"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda-python-alpha": "^2.60.0-alpha.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "aws-cdk-lib": "2.60.0",
-    "awscdk-appsync-utils": "^0.0.4",
-    "cdk-nag": "2.23.5",
+    "@aws-cdk/aws-lambda-python-alpha": "^2.89.0-alpha.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "aws-cdk-lib": "2.89.0",
+    "awscdk-appsync-utils": "^0.0.167",
+    "cdk-nag": "^2.27.88",
     "cdk-serverless-clamscan": "^2.4.147",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
