User management rewrite

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,5 +34,5 @@
     "editor.defaultFormatter": "ms-python.black-formatter"
   },
   "typescript.tsdk": "node_modules/typescript/lib",
-  "cSpell.words": ["awsconfig"]
+  "cSpell.words": ["awsconfig", "DREM"]
 }
