--- a/website/package.json
+++ b/website/package.json
@@ -28,7 +28,7 @@
     "i18next-http-backend": "^2.2.1",
     "i18next-xhr-backend": "^3.2.2",
     "install": "^0.13.0",
-    "npm": "^9.8.1",
+    "npm": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.0",
@@ -63,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@svgr/webpack": "^8.1.0",
     "eslint": "^8.47.0",
     "eslint-config-node": "^4.1.0",
