--- a/package.json
+++ b/package.json
@@ -33,26 +33,29 @@
     "@types/jest": "^29.5.4",
     "@types/node": "20.5.6",
     "@types/prettier": "3.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "aws-cdk": "2.93.0",
-    "eslint": "^8.47.0",
+    "eslint": "^8.48.0",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.6.4",
-    "prettier": "^3.0.2",
+    "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2"
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.93.0-alpha.0",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
     "aws-cdk-lib": "2.93.0",
     "awscdk-appsync-utils": "^0.0.190",
     "cdk-nag": "^2.27.111",
