Fix for __typename appearing in graphql autogenerated mutations

--- a/website/src/graphql/.graphqlconfig.yml
+++ b/website/src/graphql/.graphqlconfig.yml
@@ -8,6 +8,7 @@ projects:
     extensions:
       amplify:
         codeGenTarget: javascript
+        typenameIntrospection: false
         generatedFileName: ''
         docsFilePath: .
         region: eu-west-1
