--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/ui-react": "^5.3.1",
     "@cloudscape-design/collection-hooks": "^1.0.25",
     "@cloudscape-design/components": "^3.0.409",
+    "@cloudscape-design/design-tokens": "^3.0.28",
     "@cloudscape-design/global-styles": "^1.0.13",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
