Change docker repository

--- a/lib/lambdas/models_optimize/Dockerfile
+++ b/lib/lambdas/models_optimize/Dockerfile
@@ -1,6 +1,6 @@
 # Derived from Dockerfile provided by Intel on https://github.com/openvinotoolkit/docker_ci/tree/master/dockerfiles
 # SPDX-License-Identifier: Apache-2.0
-FROM ubuntu:20.04
+FROM public.ecr.aws/ubuntu/ubuntu:20.04
 
 ENV TZ="America/New_York" 
 ENV DEBIAN_FRONTEND="noninteractive" 
