--- a/compose.yaml
+++ b/compose.yaml
@@ -4,10 +4,8 @@ name: drem
 services:
   website:
     build:
-      context: .
-      dockerfile: Dockerfile.website
-    environment:
-      - PORT=3000
+      context: ./website
+      dockerfile: Dockerfile
     networks:
       - drem
     restart: unless-stopped
@@ -19,10 +17,8 @@ services:
 
   leaderboard:
     build:
-      context: .
-      dockerfile: Dockerfile.leaderboard
-    environment:
-      - PORT=3001
+      context: ./website-leaderboard
+      dockerfile: Dockerfile
     networks:
       - drem
     restart: unless-stopped
@@ -32,12 +28,10 @@ services:
       - ./website-leaderboard:/app
       - /app/node_modules
 
-  overlay:
+  overlays:
     build:
-      context: .
-      dockerfile: Dockerfile.overlay
-    environment:
-      - PORT=3002
+      context: ./website-stream-overlays
+      dockerfile: Dockerfile
     networks:
       - drem
     restart: unless-stopped
@@ -47,10 +41,6 @@ services:
       - ./website-stream-overlays:/app
       - /app/node_modules
 
-#   app:
-#     build:
-#       context: .
-#       dockerfile: Dockerfile
 #     environment:
 #       - BUCKET=${BUCKET}
 #       - REGION=${REGION}
@@ -59,18 +49,7 @@ services:
 #       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 #       - AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
 #       - BRANCH=$(git symbolic-ref --short HEAD)
-#       - ACCOUNT=${aws sts get-caller-identity --query Account --output text}
-#     networks:
-#       - drem
-#     restart: unless-stopped
-#     ports:
-#       - 3000-3002:3000-3002
-#     volumes:
-#       - .:/app
-#       - /app/node_modules/
-#       - /app/website/node_modules/
-#       - /app/website-leaderboard/node_modules/
-#       - /app/website-stream-overlays/node_modules/
+#       - ACCOUNT=$(aws sts get-caller-identity --query Account --output text)
 
 networks:
   drem:
