--- a/compose.yaml
+++ b/compose.yaml
@@ -25,8 +25,8 @@ services:
     ports:
       - 3001:3000
     volumes:
-      - ./website-leaderboard/src:/app/src
-      - ./website-leaderboard/public:/app/public
+      - ./website-leaderboard:/app
+      - /app/node_modules
 
   overlays:
     build:
