Adding words to the spell check

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,8 @@
     "awsconfig",
     "deepracer",
     "DREM",
+    "hyperparameter",
+    "hyperparameters",
     "leaderboard",
     "Silverstone"
   ],
