--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@aws-cdk/aws-lambda-python-alpha": "^2.93.0-alpha.0",
     "aws-cdk-lib": "2.93.0",
     "awscdk-appsync-utils": "^0.0.190",
-    "cdk-nag": "^2.27.111",
+    "cdk-nag": "2.27.111",
     "cdk-serverless-clamscan": "^2.5.64",
     "constructs": "^10.2.69",
     "source-map-support": "^0.5.21"
