--- a/website-leaderboard/package.json
+++ b/website-leaderboard/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^3.4.0"
   },
   "scripts": {
@@ -60,9 +60,13 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.4.2",
+    "typescript": "5.2.2"
   },
   "overrides": {
+    "react-scripts": {
+      "typescript": "^5"
+    },
     "react-refresh": "^0.14.0"
   }
 }
