--- a/website-stream-overlays/package.json
+++ b/website-stream-overlays/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.4.2",
+    "typescript": "5.2.2"
   }
 }
