Remove warnings from web

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "20.5.6",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "aws-cdk": "2.166.0",
     "eslint": "^8.48.0",
     "eslint-config-node": "^4.1.0",
